--- a/src/libmotion/Makefile
+++ b/src/libmotion/Makefile
@@ -1,5 +1,3 @@
-EXTDIR=$(CURDIR)/../../external
-
 CC=g++
 CFLAGS =-m64 -Dlinux32 -DWM_DP -O2 # remove O0 when no bug
 CFLAGS+=-Wall -Wextra -Wno-unused-parameter -Wold-style-cast -Wnon-virtual-dtor
@@ -7,7 +5,6 @@ CFLAGS+=-DNoRepository -ftemplate-depth-100 -fPIC -std=c++14
 CFLAGS+=-DWM_ARCH_OPTION=64 -DWM_LABEL_SIZE=32
 
 INFLAGS =-I.
-INFLAGS+=-I$(EXTDIR)/
 INFLAGS+=-IlnInclude
 INFLAGS+=-I$(FOAM_SRC)/finiteVolume/lnInclude
 INFLAGS+=-I$(FOAM_SRC)/OpenFOAM/lnInclude
@@ -18,7 +15,7 @@ INFLAGS+=-I$(FOAM_SRC)/meshTools/lnInclude
 LIBMPI=$(FOAM_LIBBIN)/openmpi-system/libPstream.so
 
 LDFLAGS =-lm
-LDFLAGS+=-L$(FOAM_LIBBIN) -lfiniteVolume -lOpenFOAM -ldynamicFvMesh -L$(EXTDIR) -lyaml-cpp
+LDFLAGS+=-L$(FOAM_LIBBIN) -lfiniteVolume -lOpenFOAM -ldynamicFvMesh
 
 LIBSOURCES= motionfactory.cpp
 LIBOBJECTS=$(LIBSOURCES:.cpp=.o)
