--- a/.gitignore
+++ b/.gitignore
@@ -2,33 +2,23 @@
 cpc.*
 # Compiled source #
 ###################
-*.com
-*.class
 *.dll
 *.exe
 *.o
 *.so
 *.a
+*.pro
 sdfibm
 
 # Packages #
 ############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
 *.7z
-*.dmg
 *.gz
-*.iso
-*.jar
 *.rar
 *.tar
 *.zip
 
-# Logs and databases #
-######################
 *.log
-*.sql
-*.sqlite
 
 # OS generated files #
 ######################
@@ -37,5 +27,10 @@ sdfibm
 ._*
 .Spotlight-V100
 .Trashes
+
 ehthumbs.db
 Thumbs.db
+
+src/.vscode
+src/.vscode/settings.json
+.gitignore
