update cmake list file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,9 @@ add_subdirectory(libshape)
 add_subdirectory(libmotion)
 add_subdirectory(libmaterial)
 add_subdirectory(libcollision)
+if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/test/CMakeLists.txt")
+    add_subdirectory(test)
+endif()
 
 add_executable(${PROJECT_NAME} main.cpp cellenumerator.cpp geometrictools.cpp logger.cpp meshinfo.cpp solid.cpp solidcloud.cpp)
 add_definitions(${FOAMFLAG})
