--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,11 +6,15 @@ if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/test/CMakeLists.txt")
     add_subdirectory(test)
 endif()
 
-add_executable(${PROJECT_NAME} main.cpp cellenumerator.cpp geometrictools.cpp logger.cpp meshinfo.cpp solid.cpp solidcloud.cpp)
+add_library(sdfibm_util STATIC cellenumerator.cpp geometrictools.cpp meshinfo.cpp)
+target_include_directories(sdfibm_util PUBLIC ${FOAMINC})
+target_link_libraries(sdfibm_util PUBLIC m)
+
+add_executable(${PROJECT_NAME} main.cpp logger.cpp solid.cpp solidcloud.cpp)
 add_definitions(${FOAMFLAG})
 
 target_include_directories(${PROJECT_NAME} PUBLIC $FOAMINC)
 target_link_libraries(${PROJECT_NAME} PUBLIC
     OpenFOAM finiteVolume meshTools Pstream
-    dl m motion shape collision)
+    dl m motion shape collision sdfibm_util)
 
