too mange changes than I care to list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(sdfibm LANGUAGES CXX C)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
 
 if(DEFINED ENV{WM_PROJECT_DIR})
 	MESSAGE(STATUS "OpenFOAM: " $ENV{WM_PROJECT_DIR})
