update to work with OF version 12 (breaks backward compatibility)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(FOAMSRC $ENV{FOAM_SRC})
 set(FOAMMPI $ENV{FOAM_MPI})
 
 set(FOAMFLAG "-std=c++17 -m64 -Dlinux64 -DWM_ARCH_OPTION=64 -DWM_DP -DWM_LABEL_SIZE=32 -Wall -Wextra -Wno-unused-parameter -Wno-overloaded-virtual -Wold-style-cast
--Wnon-virtual-dtor -Wno-unused-variable -Wno-unused-local-typedef -Wno-invalid-offsetof -Wno-deprecated-register -Wno-undefined-var-template -DNoRepository -ftemplate-depth-100 -fPIC")
+-Wnon-virtual-dtor -Wno-unused-variable -Wno-invalid-offsetof -DNoRepository -ftemplate-depth-100 -fPIC")
 
 set(FOAMINC
     ${FOAMSRC}/finiteVolume/lnInclude 
